--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-    /* overflow-x: hidden; */
+::-webkit-scrollbar {
+    width: 10px;
+
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgb(0, 0, 0);
+
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(255, 255, 94);
+    border-radius: 20px;
+
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(61, 245, 61);
+
 }
